syntax = "proto3";

package testing;

import "proto/eth/ext/options.proto";

option go_package = "github.com/OffchainLabs/prysm/v6/proto/ssz_query";

message SSZQueryProof {
    bytes leaf = 1 [ (ethereum.eth.ext.ssz_size) = "32" ];
    uint64 gindex = 2;
    repeated bytes proofs = 3 [
        (ethereum.eth.ext.ssz_size) = "?,32",
        (ethereum.eth.ext.ssz_max) = "64,?" 
    ];
}

message SSZQueryResponse {
    bytes root = 1 [ (ethereum.eth.ext.ssz_size) = "32" ];
    bytes result = 2 [ (ethereum.eth.ext.ssz_max) = "1073741824" ];
}

message SSZQueryResponseWithProof {
    bytes root = 1 [ (ethereum.eth.ext.ssz_size) = "32" ];
    bytes result = 2 [ (ethereum.eth.ext.ssz_max) = "1073741824" ];
    SSZQueryProof proof = 3;
}
